--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
+    "nanoid": "^5.1.6",
     "nativewind": "^5.0.0-preview.1",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "react": "19.1.0",
@@ -45,6 +46,8 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-image-colors": "^2.5.0",
     "react-native-keyboard-controller": "1.18.5",
+    "react-native-mmkv": "^4.0.0",
+    "react-native-nitro-modules": "^0.31.2",
     "react-native-reanimated": "~4.1.1",
     "react-native-reanimated-carousel": "^4.0.3",
     "react-native-safe-area-context": "~5.6.0",
@@ -53,7 +56,8 @@
     "react-native-ui-datepicker": "^3.1.2",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
