--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "start:dev": "NODE_ENV=development expo start",
+    "start:prod": "NODE_ENV=prod expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "ios:dev": "NODE_ENV=development expo run:ios",
+    "ios:prod": "NODE_ENV=prod expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
   "dependencies": {
+    "@dev-plugins/react-query": "^0.4.0",
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@gorhom/bottom-sheet": "^5.2.6",
@@ -19,6 +24,8 @@
     "@react-navigation/native": "^7.1.8",
     "@shopify/flash-list": "2.0.2",
     "@shopify/react-native-skia": "2.2.12",
+    "@tanstack/react-query": "^5.90.6",
+    "axios": "^1.13.1",
     "date-fns": "^4.1.0",
     "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "expo": "~54.0.10",
@@ -56,6 +63,7 @@
     "react-native-ui-datepicker": "^3.1.2",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "sonner-native": "^0.21.1",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
