--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@shopify/flash-list": "2.0.2",
     "@shopify/react-native-skia": "2.2.12",
     "@tanstack/react-query": "^5.90.6",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.13.1",
     "date-fns": "^4.1.0",
     "eslint-plugin-react-compiler": "^19.1.0-rc.2",
